# internal/models/responses/landing_stats_response.go
@@ -1,0 +1,7 @@
+package responses
+
+type LandingStatsResponse struct {
+	TotalLinks       int64 `json:"total_links"`
+	TotalActiveUsers int64 `json:"total_active_users"`
+	TotalClicks      int64 `json:"total_clicks"`
+}
